# nexus6

./: + + str(added) +   .chain  .command  .end  .ext  .gap_cooldown  .gitignore  .growth_demo_data.npy  .growth_last_scan  .guide  .own  .papers-cross-repo-lint-exempt  .raw  .raw-audit  .raw-ref  .roadmap  .roadmap.atlas_n6  .roadmap.bind  .roadmap.kick  .roadmap.omega_cycle  .roadmap.outside_noise_clm  .roadmap.publishing  .roadmap.qmirror  .roadmap.qrng  .roadmap.scheduler  .roadmap.sim  .roadmap.substrate_bridge  .turn  AGENTS.md  AKIDA_OMEGA_CYCLE_LAYERS.md  CLAUDE.md  Cargo.toml  GROWTH.md  LATTICE_POLICY.md  LIMIT_BREAKTHROUGH.md  OMEGA_CYCLE_EMERGENCE.md  README.md  SECRET.md  dashboard.html  discovery_log.meta.json  (+12 more)
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS
archive/: full_cleanup_list.json  survey_pending_review.json
bench/: CLAUDE.md  alm_kr_gen_100.jsonl  alm_kr_gen_100_schema.md  an11_a_criteria.json  an11_c_criteria.json  bench_outside_noise_bind.hexa  bench_outside_noise_clm_modes.hexa  bench_outside_noise_scheduler.hexa  drill_adjacent_corpus_noise_seed_set.jsonl  drill_breakthrough_criteria.json  drill_seed_meta.json  law_candidates.jsonl  law_emergence_criteria.json  phi_gap_measurement_protocol.json  t5_nextlayer_criteria.json  validate_schema.hexa
bisociation/: breakthroughs.jsonl  convergence.json  convergence_index.hexa  l5_completion.hexa  state.json
bt/: BT-541_round_1.json  BT-541_round_2.json  BT-542_bypass_1.json  BT-543_round_1.json  BT-543_round_2.json  BT-544_prediction_d7.json  bt-361-379-index.json  bt-consistency-report.md  bt-skip-reduction-report.md  bt-skip-resolution.md  bt_arch_domains.jsonl  bt_audit.hexa  bt_audit_classification.json  bt_audit_result.json  bt_domains.jsonl  bt_keywords.jsonl  bt_mismatch_classification.json  bt_skip_analysis.json  bt_structural_stats.json  metacog_BT-541.json  metacog_BT-542.json  metacog_BT-543.json  metacog_BT-544.json  metacog_BT-545.json  metacog_BT-546.json  metacog_BT-547.json  rotate_auto_bt.hexa
calc/: CLAUDE.md  auto_stubs_gen.hexa
(+16048 files in other folders)
